# Fast-API

./: README.md  pyproject.toml
app/: app.db  crud.py  database.py  main.py  models.py  schemas.py
app/migrations/versions/: 88dde5124d69_add_user_table.py
app/routers/: health_check.py  user.py
