[tool.poetry]
name = "python-project"
version = "1.0"
description = ""
authors = ["Joseph Sherrell"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
sqlalchemy = "^2.0.5.post1"
pydantic = "^1.10.6"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
